<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>car_interface</name>
  <version>1.0.0</version>
  <description>The car_interfae meta package</description>
  <maintainer email="mack@duckietown.org">Mack</maintainer>
  <maintainer email="nicholasganshyan@gmail.com">nicholas-gs</maintainer>
  <license>GPLv3</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>dagu_car</exec_depend>
  <exec_depend>joy_mapper</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
